--- a/Gori/Category_Location_Storyboard.storyboard
+++ b/Gori/Category_Location_Storyboard.storyboard
@@ -101,6 +101,7 @@
                                     <segment title="캠퍼스 주변 선택"/>
                                     <segment title="지역별 선택"/>
                                 </segments>
+                                <color key="tintColor" red="0.90980392156862744" green="0.1764705882352941" blue="0.31372549019607843" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="districtSchoolSelection:" destination="pb7-pp-PdP" eventType="valueChanged" id="3Jn-pc-1Su"/>
                                 </connections>
@@ -122,7 +123,10 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GNy-f0-yeE">
                                 <rect key="frame" x="16" y="20" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <color key="backgroundColor" red="0.90980392156862744" green="0.1764705882352941" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="backToMainView:" destination="pb7-pp-PdP" eventType="touchUpInside" id="4Kb-RU-4Ku"/>
                                 </connections>
