20170418/JunYoungJee/유저디테일 데이터모델링 생성 / 메인 뷰컨트롤러의 테이블뷰 스크롤을 SDWebImage 활용해 더 빠르게 되도록 구현(이미지 문제였음)

--- a/Gori/Main.storyboard
+++ b/Gori/Main.storyboard
@@ -322,7 +322,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uqv-cU-fg4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3658" y="-334"/>
+            <point key="canvasLocation" x="3656.8000000000002" y="-334.18290854572717"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="ii3-d5-WrU">
